tests/diagnostics_golden/diag_anonymous_access_reassign.txt
Diagnostics Golden: Anonymous Access Reassign
Source: tests/negative/neg_own_anon_reassign.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_anon_reassign.safe:19:7: error: anonymous access 'Ref' may only be assigned at its declaration
  |
  | 19 |       Ref = Other;  -- ERROR: anonymous access reassignment after declaration
  |    |       ^~~~~~~~~~~~
  |
  note: borrow and observe locals are initialization-only.
  note: rule: Safe §2.3.3 / §2.3.4a (anonymous access is initialization-only)

------------------------------------------------------------------------
